Fix the jumping iOS Switch, adjust the styling Fix the iOS ActionBar buttons Rename a variable

--- a/app/customized.scss
+++ b/app/customized.scss
@@ -23,7 +23,7 @@ $text-color: $primary;
 // Buttons
 $btn-color: $focus;
 $btn-color-secondary: #0FC572;
-$btn-color-outline-highlighted: #0AC16E;
+$background-alt-10: #0AC16E;
 $btn-color-disabled: #CCC4C9;
 
 // Core styles
