--- a/src/scss/bootstrap/_map.scss
+++ b/src/scss/bootstrap/_map.scss
@@ -10,5 +10,5 @@ $text-color: $primary !default;
 // Buttons
 $btn-color: theme-color() !default;
 $btn-color-secondary: lighten(theme-color(), 20%) !default;
-$btn-color-outline-highlighted: lighten($btn-color-secondary, 20%) !default;
+$background-alt-10: lighten($btn-color-secondary, 20%) !default;
 $btn-color-disabled: $btn-link-disabled-color !default;
