--- a/src/scss/skins/_grey.scss
+++ b/src/scss/skins/_grey.scss
@@ -16,7 +16,7 @@ $focus: $lime;
 $btn-color-inverse: $white;
 $btn-color: $focus;
 $btn-color-secondary: darken($btn-color, 10%);
-$btn-color-outline-highlighted: lighten($btn-color, 10%);
+$background-alt-10: lighten($btn-color, 10%);
 
 @import '../core/colors';
 @import '../index';
